# safe_bool

./: CMakeLists.txt  CMakePresets.json  README.md
.github/: CODEOWNERS
.github/workflows/: ci_tests.yml  reusable-beman-build-and-test.yml
examples/: CMakeLists.txt  safe_bool_usage.cpp
include/safe_bool/: safe_bool.hpp
tests/safe_bool/: CMakeLists.txt  basic.test.cpp  char-cnstrct-cmpl-fail.test.cpp  char-cnvrt-cmpl-fail.test.cpp  char-cstrct-cmpl-fail.test.cpp  charptr-cnstrct-cmpl-fail.test.cpp  compile-fail.cmake  float-cnstrct-cmpl-fail.test.cpp  int-cnstrct-cmpl-fail.test.cpp
